syntax = "proto2";

message SoilReading {
  required uint32 reading = 1;
  required uint32 time = 2;
  required uint32 pin = 3;
  required float median = 4;
  required float standard_dev = 5;
}

message TempReading {
  required float temp = 1;
  required uint32 time = 2;
}

message HumidReading {
  required float humid = 1;
  required uint32 time = 2;
}

message SoilStorage {
  repeated SoilReading soil = 1;
}

message TempStorage {
  repeated TempReading temp = 1;
}

message HumidStorage {
  repeated HumidReading humid = 1;
}

message CurrentSoil {
  required uint32 reading = 1;
  required uint32 pin = 3;
  required float median = 4;
  required float standard_dev = 5;
}

message Status {
  required uint32 software = 1;
  required uint32 version = 2;
  required string id = 3;
  required string url = 4;
  required uint32 lights = 5;
  required uint32 cameras = 6;
  required bool halted = 7;
  required bool debug = 8;
  required bool soil_calibrating = 9;
  required float current_temp = 10;
  required float current_humid = 11;
  required float pi_temp = 12;
  required float pi_volts = 13;
  required uint32 up_time = 14;
  repeated CurrentSoil current_soil = 15;
  
}
message Modifiers {
  required bool reboot = 1;
  required bool halt = 2;
  required bool calibrate_soil = 3;
  required uint32 image_interval = 4;
  required uint32 morning_time = 5;
  required uint32 night_time = 6;
  required bool lights_enabled = 7;
  required bool cameras_enabled = 8;
}

message State {
  required Status status = 1;
  required Modifiers modifiers = 2;
}